Add Jitpack Library추가를 위한 기초 작업.(추후 CD에서 Library 배포를 위한 목적)  1. KtLint 추가   - .editorconfig로 조건 설정 추가.
 2. Test Library(Kover) 추가.
  - UnitTest, RoboletricTest 코드 추가.

 3. Library 사용을 위한 문서 Library(Dokka) 추가.

 4. jitpack배포를 위한 Gradle 설정, jitpack.yml 추가.

 5. 버전 연동 추가 libs.versions.toml