@@ -2,6 +2,9 @@ plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
     id("maven-publish")
+
+    id("org.jetbrains.kotlinx.kover") version "0.9.3" // UnitTest
+    id("org.jetbrains.dokka") version "2.1.0" // Dokka - Document
 }
 
 publishing {
@@ -34,7 +37,7 @@ android {
             isMinifyEnabled = false
             proguardFiles(
                 getDefaultProguardFile("proguard-android-optimize.txt"),
-                "proguard-rules.pro"
+                "proguard-rules.pro",
             )
         }
     }
@@ -44,6 +47,16 @@ android {
     }
     kotlinOptions {
         jvmTarget = "11"
+    }
+
+    testOptions {
+        unitTests {
+            isIncludeAndroidResources = true
+            all {
+                val currentArgs = it.jvmArgs ?: emptyList()
+                it.jvmArgs = currentArgs + "-XX:+EnableDynamicAgentLoading"
+            }
+        }
     }
 }
 
@@ -55,4 +68,47 @@ dependencies {
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
+
+    // Add text
+    testImplementation("org.robolectric:robolectric:4.16")
+    testImplementation("androidx.test:core:1.6.1")
+    testImplementation("org.mockito:mockito-core:5.7.0")
+    testImplementation("org.mockito:mockito-inline:5.2.0")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.1")
+
+    // Dokka - Document
+    dokkaPlugin("org.jetbrains.dokka:android-documentation-plugin:2.1.0")
+}
+
+// Test tasks
+tasks.register<Test>("testUnit") {
+    description = "Runs pure unit tests only (no Android dependencies)"
+    group = "verification"
+
+    val testDebugTask = tasks.named<Test>("testDebugUnitTest")
+    testClassesDirs = testDebugTask.get().testClassesDirs
+    classpath = testDebugTask.get().classpath
+
+    include("**/unit/**")
+    failFast = true
+}
+
+tasks.register<Test>("testRobolectric") {
+    description = "Runs Robolectric tests only (Android framework simulation)"
+    group = "verification"
+
+    val testDebugTask = tasks.named<Test>("testDebugUnitTest")
+    testClassesDirs = testDebugTask.get().testClassesDirs
+    classpath = testDebugTask.get().classpath
+
+    include("**/robolectric/**")
+    failFast = true
+    mustRunAfter("testUnit")
+}
+
+tasks.register("testAll") {
+    description = "Runs unit tests first, then robolectric tests if unit tests pass"
+    group = "verification"
+
+    dependsOn("testUnit", "testRobolectric")
 }
